tests/lex-fail/unicode_str_digit.fl.0.exp
Error: unicode_str_digit.fl(1,3): Non-hexadecimal digit encountered in Unicode escape sequence
"\u0000000G"
  ^          
